--- a/app/src/main/res/layout/fragment_todo_form.xml
+++ b/app/src/main/res/layout/fragment_todo_form.xml
@@ -197,16 +197,16 @@
             android:fontFamily="@font/google_sans"
             android:gravity="top|start"
             android:hint="Start typing"
-            android:paddingTop="6dp"
             android:importantForAutofill="no"
             android:inputType="textMultiLine|textCapSentences"
             android:lineSpacingExtra="10sp"
             android:nestedScrollingEnabled="true"
             android:overScrollMode="ifContentScrolls"
+            android:paddingTop="6dp"
             android:scrollbarStyle="insideOverlay"
             android:scrollbars="vertical"
-            android:textSize="16sp"
-            android:textCursorDrawable="@color/white"/>
+            android:textCursorDrawable="@color/white"
+            android:textSize="16sp" />
 
     </androidx.core.widget.NestedScrollView>
 
@@ -225,159 +225,181 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:visibility="visible">
 
-        <LinearLayout
-            android:id="@+id/defaultOptionsContainer"
-            android:layout_width="wrap_content"
+        <HorizontalScrollView
+            android:id="@+id/defaultOptionsScrollView"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
+            android:layout_weight="1"
+            android:scrollbars="none"
             android:visibility="visible">
 
-            <TextView
-                android:id="@+id/btnAddRecord"
+            <LinearLayout
+                android:id="@+id/defaultOptionsContainer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/back_button_ripple"
-                android:contentDescription="Add Record"
-                android:fontFamily="@font/fa_free_solid_400"
-                android:padding="12dp"
-                android:text="\uf130"
-                android:textColor="@color/dark_gray"
-                android:textSize="24sp" />
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/btnAddImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:background="@drawable/back_button_ripple"
-                android:contentDescription="Add Image"
-                android:fontFamily="@font/fa_free_solid_400"
-                android:padding="12dp"
-                android:text="\uf03e"
-                android:textColor="@color/dark_gray"
-                android:textSize="24sp" />
+                <TextView
+                    android:id="@+id/btnAddRecord"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/back_button_ripple"
+                    android:contentDescription="Add Record"
+                    android:fontFamily="@font/fa_free_solid_400"
+                    android:padding="12dp"
+                    android:text="\uf130"
+                    android:textColor="@color/dark_gray"
+                    android:textSize="24sp" />
 
-            <TextView
-                android:id="@+id/btnLocation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:background="@drawable/back_button_ripple"
-                android:contentDescription="Add Image"
-                android:fontFamily="@font/fa_free_solid_400"
-                android:padding="12dp"
-                android:text="\uf3c5"
-                android:textColor="@color/dark_gray"
-                android:textSize="24sp" />
+                <TextView
+                    android:id="@+id/btnAddImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:background="@drawable/back_button_ripple"
+                    android:contentDescription="Add Image"
+                    android:fontFamily="@font/fa_free_solid_400"
+                    android:padding="12dp"
+                    android:text="\uf03e"
+                    android:textColor="@color/dark_gray"
+                    android:textSize="24sp" />
 
-            <TextView
-                android:id="@+id/btnAddCheckbox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:background="@drawable/back_button_ripple"
-                android:contentDescription="Add Checkbox"
-                android:fontFamily="@font/fa_free_solid_400"
-                android:padding="12dp"
-                android:text="\uf14a"
-                android:textColor="@color/dark_gray"
-                android:textSize="24sp" />
+                <TextView
+                    android:id="@+id/btnLocation"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:background="@drawable/back_button_ripple"
+                    android:contentDescription="Add Image"
+                    android:fontFamily="@font/fa_free_solid_400"
+                    android:padding="12dp"
+                    android:text="\uf3c5"
+                    android:textColor="@color/dark_gray"
+                    android:textSize="24sp" />
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/btnAddCheckbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:background="@drawable/back_button_ripple"
+                    android:contentDescription="Add Checkbox"
+                    android:fontFamily="@font/fa_free_solid_400"
+                    android:padding="12dp"
+                    android:text="\uf14a"
+                    android:textColor="@color/dark_gray"
+                    android:textSize="24sp" />
+            </LinearLayout>
+        </HorizontalScrollView>
 
-        <LinearLayout
-            android:id="@+id/textOptionsContainer"
-            android:layout_width="wrap_content"
+        <HorizontalScrollView
+            android:id="@+id/textOptionsScrollView"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
+            android:layout_weight="1"
+            android:scrollbars="none"
             android:visibility="gone">
 
-            <TextView
-                android:id="@+id/btnBold"
+            <LinearLayout
+                android:id="@+id/textOptionsContainer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/back_button_ripple"
-                android:contentDescription="Bold"
-                android:fontFamily="@font/fa_free_solid_400"
-                android:padding="12dp"
-                android:text="\u0042"
-                android:textColor="@color/dark_gray"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/btnHighlight"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:background="@drawable/back_button_ripple"
-                android:contentDescription="Highlight"
-                android:fontFamily="@font/fa_free_solid_400"
-                android:padding="12dp"
-                android:text="\uf591"
-                android:textColor="@color/dark_gray"
-                android:textSize="24sp" />
+                <TextView
+                    android:id="@+id/btnBold"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/back_button_ripple"
+                    android:contentDescription="Bold"
+                    android:fontFamily="@font/fa_free_solid_400"
+                    android:padding="12dp"
+                    android:text="\u0042"
+                    android:textColor="@color/dark_gray"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/btnItalic"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:background="@drawable/back_button_ripple"
-                android:contentDescription="Italic"
-                android:fontFamily="@font/fa_free_solid_400"
-                android:padding="12dp"
-                android:text="\uf033"
-                android:textColor="@color/dark_gray"
-                android:textSize="24sp" />
+                <TextView
+                    android:id="@+id/btnHighlight"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:background="@drawable/back_button_ripple"
+                    android:contentDescription="Highlight"
+                    android:fontFamily="@font/fa_free_solid_400"
+                    android:padding="12dp"
+                    android:text="\uf591"
+                    android:textColor="@color/dark_gray"
+                    android:textSize="24sp" />
 
-            <TextView
-                android:id="@+id/btnUnderline"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:background="@drawable/back_button_ripple"
-                android:contentDescription="Underline"
-                android:fontFamily="@font/fa_free_solid_400"
-                android:padding="12dp"
-                android:text="\uf0cd"
-                android:textColor="@color/dark_gray"
-                android:textSize="24sp" />
+                <TextView
+                    android:id="@+id/btnItalic"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:background="@drawable/back_button_ripple"
+                    android:contentDescription="Italic"
+                    android:fontFamily="@font/fa_free_solid_400"
+                    android:padding="12dp"
+                    android:text="\uf033"
+                    android:textColor="@color/dark_gray"
+                    android:textSize="24sp" />
 
-            <TextView
-                android:id="@+id/btnStrikeThrough"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:background="@drawable/back_button_ripple"
-                android:contentDescription="Strike Through"
-                android:fontFamily="@font/fa_free_solid_400"
-                android:padding="12dp"
-                android:text="\uf0cc"
-                android:textColor="@color/dark_gray"
-                android:textSize="24sp" />
+                <TextView
+                    android:id="@+id/btnUnderline"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:background="@drawable/back_button_ripple"
+                    android:contentDescription="Underline"
+                    android:fontFamily="@font/fa_free_solid_400"
+                    android:padding="12dp"
+                    android:text="\uf0cd"
+                    android:textColor="@color/dark_gray"
+                    android:textSize="24sp" />
 
-            <TextView
-                android:id="@+id/btnBullet"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:background="@drawable/back_button_ripple"
-                android:contentDescription="Underline"
-                android:fontFamily="@font/fa_free_solid_400"
-                android:padding="12dp"
-                android:text="\uf0ca"
-                android:textColor="@color/dark_gray"
-                android:textSize="24sp" />
+                <TextView
+                    android:id="@+id/btnStrikeThrough"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:background="@drawable/back_button_ripple"
+                    android:contentDescription="Strike Through"
+                    android:fontFamily="@font/fa_free_solid_400"
+                    android:padding="12dp"
+                    android:text="\uf0cc"
+                    android:textColor="@color/dark_gray"
+                    android:textSize="24sp" />
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/btnBullet"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:background="@drawable/back_button_ripple"
+                    android:contentDescription="Underline"
+                    android:fontFamily="@font/fa_free_solid_400"
+                    android:padding="12dp"
+                    android:text="\uf0ca"
+                    android:textColor="@color/dark_gray"
+                    android:textSize="24sp" />
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
+                <TextView
+                    android:id="@+id/btnH1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:background="@drawable/back_button_ripple"
+                    android:contentDescription="H1"
+                    android:fontFamily="@font/fa_free_solid_400"
+                    android:padding="12dp"
+                    android:text="\uf1dc"
+                    android:textColor="@color/dark_gray"
+                    android:textSize="24sp" />
+            </LinearLayout>
+        </HorizontalScrollView>
 
         <TextView
             android:id="@+id/btnToggleTextOptions"
