--- a/app/src/main/res/layout/fragment_todo_list.xml
+++ b/app/src/main/res/layout/fragment_todo_list.xml
@@ -173,7 +173,7 @@
         android:id="@+id/btnAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_marginBottom="60dp"
         android:contentDescription="Add new todo"
         android:src="@android:drawable/ic_input_add"
         app:backgroundTint="#feb317"
