--- a/app/src/main/res/layout/widget_large.xml
+++ b/app/src/main/res/layout/widget_large.xml
@@ -19,9 +19,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Todoo"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:textStyle="bold"
-            android:textColor="#000000" />
+            android:textColor="#000000"
+            android:layout_marginLeft="12dp"/>
 
         <TextView
             android:id="@+id/widget_add_button"
