--- a/app/src/main/res/xml/todo_widget_info.xml
+++ b/app/src/main/res/xml/todo_widget_info.xml
@@ -4,6 +4,7 @@
     android:initialLayout="@layout/widget_small"
     android:minWidth="110dp"
     android:minHeight="110dp"
+    android:maxResizeWidth="300dp"   android:maxResizeHeight="200dp"
     android:previewImage="@drawable/widget_preview"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="1800000"
